Fixed an issue with newline chars and encoding.